# among-us-real-life

./: .gitignore  README.md  ideas.txt  package-lock.json  package.json
.github/workflows/: build_and_push.yml
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  init-config.sh
docker/frontend/: default.conf.template  nginx.conf  start-nginx.sh
server/: .env.example  __init__.py  main.py  pyproject.toml  server.py
server/config/: __init__.py  config.json  gamestate.py  json_store.py  players.json  sabotages.json  tasks.json
server/data/: config.json  players.json  sabotages.json  tasks.json
server/events/: __init__.py  auth.py  config.py  connect.py  game.py  gamestate.py  meeting.py  playerinfo.py  sabotage.py  tasks.py
src/: config.js  index.js
web/: .env  .env.example  .gitignore  index.html  vite.config.js
web/src/: App.jsx  main.jsx
web/src/components/: ProgressBar.jsx  Timer.jsx
web/src/components/meeting/: EmergencyMeeting.jsx  PlayerCard.jsx
web/src/hooks/: useAuthId.js  useChangePlayerVitals.js  useCompleteTask.js  useConfigList.js  useConfirmTask.js  useCountdownTimer.js  useDiffuseSabotage.js  useEndMeeting.js  useGetActiveSabotage.js  useGetAllTasks.js  useGetGameConfig.js  useGetGameState.js  useGetPendingTasks.js  useGetPlayerInfo.js  useGetPlayerTasks.js  useGetPlayers.js  useKickPlayer.js  useReportDeadBody.js  useSabotageConfig.js  useSocketConnection.js  useSocketConnection.jsx  useTaskConfig.js  useVoteForPlayer.js
web/src/pages/: Admin.jsx
web/src/pages/admin/: AdminPage.jsx  GameConfig.jsx
(+51 files in other folders)
